missing on "#" :art:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -759,51 +759,51 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-### R308: Edit Project Members Form
+#### R308: Edit Project Members Form
 
 <!-- TODO: /dashboard/my_projects/{idProject}/manage_members -->
 
-### R309: Edit Project Members Action
+#### R309: Edit Project Members Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/manage_members -->
 
-### R310: Create Project Task Form
+#### R310: Create Project Task Form
 
 <!-- TODO: /dashboard/my_projects/{idProject}/create_task -->
 
-### R311: Remove Project Task Form
+#### R311: Remove Project Task Form
 
 <!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
 
-### R312: Edit Project Task Form
+#### R312: Edit Project Task Form
 
 <!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
 
-### R313: Edit Project Task Action
+#### R313: Edit Project Task Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
 
-### R314: View Project Options
+#### R314: View Project Options
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-### R315: Upload Files Action
+#### R315: Upload Files Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-### R316: Edit Project Description Action
+#### R316: Edit Project Description Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-### R317: Edit Project Description Action
+#### R317: Edit Project Description Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-### R318: Save Project Changes Action
+#### R318: Save Project Changes Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-### 3.4 Module M04: Search Engine
+#### 3.4 Module M04: Search Engine
 
 #### Endpoints of Module Search Engine
 
