fixed typos :bug:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -511,7 +511,7 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/manage_members```
 
-- R309: Edit Project Members Action ```/dashboard_my_projects/{idProject}/manage_members```
+- R309: Edit Project Members Action ```/dashboard/my_projects/{idProject}/manage_members```
 
 - R310: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
 
@@ -529,7 +529,7 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R317: Edit Project Name Action ```/dashboard/my_projects/{idProject}/options```
 
-- R318: Edit Project Description Action ```/dashbaord/my_projects/{idProject}/options```
+- R318: Edit Project Description Action ```/dashboard/my_projects/{idProject}/options```
 
 - R318: Save Project Changes Action ```/dashboard/my_projects/{idProject}/options```
 
