small fix on JSON :bug:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1364,7 +1364,7 @@ The architecture of our **Project Management** web application to develop is doc
       "creationDate": "2017-06-29",
       "deadline": "2018-05-20",
       "completed": "false",
-      "Project" : "Sub-Ex",
+      "projectName" : "Sub-Ex",
     },
   ]
 }
@@ -1396,4 +1396,3 @@ GROUP1743, 08/04/2018
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
 > João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt
 > Mário Rui Macedo Flores dos Santos, up201503406@fe.up.pt
-
