All tables completed except 2
R315: Browse Files <TODO>
R316: Upload Files <TODO>

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -511,27 +511,23 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/manage_members```
 
-- R309: Edit Project Members Action ```/dashboard/my_projects/{idProject}/manage_members```
+- R309: Edit Project Members Action ```/dashboard_my_projects/{idProject}/manage_members```
 
 - R310: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
 
-- R311: Remove Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R311: Create Project Task Action ```/dashboard/my_projects/{idProject}/create_task```
 
-- R312: Edit Project Task Form ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R312: Delete Project Task ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-- R313: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R313: Edit Project Task Form ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-- R314: View Project Options ```/dashboard/my_projects/{idProject}/options```
+- R314: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
 
 - R315: Browse Files Action ```/dashboard/my_projects/{idProject}/options```
 
 - R316: Upload Files Action ```/dashboard/my_projects/{idProject}/options```
 
-- R317: Edit Project Name Action ```/dashboard/my_projects/{idProject}/options```
-
-- R318: Edit Project Description Action ```/dashboard/my_projects/{idProject}/options```
-
-- R318: Save Project Changes Action ```/dashboard/my_projects/{idProject}/options```
+- R317: Edit Project Action ```/dashboard/my_projects/{idProject}/options```
 
 #### R301: View Project Tasks
 
@@ -644,7 +640,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Submit</th>
-    <td>R305</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R303</a></th>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -685,8 +681,8 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project thumbnail picture</td>
   </tr>
   <tr>
-    <th>Submit</th>
-    <td>R305</th>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r304-create-project-form">R304</a></th>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -745,14 +741,10 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project primary key</td>
   </tr>
   <tr>
-    <th rowspan="2">Redirects</th>
-    <td>R306</th>
-    <td>Success</td>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r306-view-project-options">R306</a></td>
   </tr>
-  <tr>
-    <td>R306</th>
-    <td>Error</td>
-  </tr>
+
   <tr>
     <th>Permissions</th>
     <td colspan="2">OWN, COO</td>
@@ -761,47 +753,320 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### R308: Edit Project Members Form
 
-<!-- TODO: /dashboard/my_projects/{idProject}/manage_members -->
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/manage_members</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Page with a form to change member role and ban.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>idProject</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI30_Edit_Users.png">UI10</a></td>
+  </tr>
+  <tr>
+    <th>Submit</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-task-action">R309</a></th>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
 
 #### R309: Edit Project Members Action
 
-<!-- TODO: /dashboard/my_projects/{idProject}/manage_members -->
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/manage_members</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2"Changes selected member role or ban.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2"PUT</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+idProject</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th rowspan="3">Request Body</th>
+    <td>?name: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <td>?description: string</td>
+    <td>Project Description</td>
+  </tr>
+  <tr>
+    <td>?img: string?</td>
+    <td>Project Thumbnail Path</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
+  </tr>
+    <th>Permissions</th>
+    <td colspan="2"OWN, COO</td>
+  </tr>
+</table>
+</table>
 
 #### R310: Create Project Task Form
 
-<!-- TODO: /dashboard/my_projects/{idProject}/create_task -->
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/create_task</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Creates a new task. Redirects to the project tasks page page on success and the create project form on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+   <tr>
+    <th>UI</th>
+    <td colspan="2">GET</td>
+  </tr>
+    <tr>
+    <th>Parameters</th>
+    <td>+idProject: integer</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI28_New_Task.png">UI10</a></td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR</td>
+  </tr>
+</table>
+#### R311: Create Project Task Action
 
-#### R311: Remove Project Task Form
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/create_task</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Creates a new task. Redirects to the project tasks page page on success and the create project form on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">POST</td>
+  </tr>
+    <tr>
+    <th>Parameters</th>
+    <td>idProject</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th rowspan="3">Request Body</th>
+    <td>+title: string</td>
+    <td>Task title</td>
+  </tr>
+  <tr>
+    <td>+category</td>
+    <td>Task category</td>
+  </tr>
+  <tr>
+    <td>+content: string</td>
+    <td>Task text content</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r310-create-project-task-form">R310</a>R310</th>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">USR</td>
+  </tr>
+</table>
 
-<!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
+#### R312: Delete Project Task
 
-#### R312: Edit Project Task Form
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/manage_tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Deletes project task from system.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">Delete</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <td>?idTask:integer</td>
+    <td>Task primary key</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a>       </td>
+  </tr>
 
-<!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">OWN, COO</td>
+  </tr>
+</table>
 
-#### R313: Edit Project Task Action
+#### R313: Edit Project Task Form
 
-<!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/manage_tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Form to edit task.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+idProject</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui18-edit-task">UI18</a></td>
+  </tr>
+  <tr>
+    <th>Submit</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r313-edit-project-task-action">R313</a></th>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+#### R314: Edit Project Task Action
 
-#### R314: View Project Options
+
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/manage_tasks</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2"Changes the tasks title or content.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2"PUT</td>
+  </tr>
+  <tr>
+    <th>Parameters</th>
+    <td>+idProject</td>
+    <td>Project Primary Key</td>
+  </tr>
+  <tr>
+    <th rowspan="3">Request Body</th>
+    <td>?title: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <td>?content: string</td>
+    <td>Project Description</td>
+  </tr>
+  <tr>
+    <td>?img: string?</td>
+    <td>Project Thumbnail Path</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
+  </tr>
+    <th>Permissions</th>
+    <td colspan="2"OWN, COO</td>
+  </tr>
+</table>
+</table>
+
+#### R315: Browse Files Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-#### R315: Upload Files Action
+#### R316: Upload Files Action
 
 <!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
-#### R316: Edit Project Description Action
+#### R317: Edit Project Action
 
-<!-- TODO: /dashboard/my_projects/{idProject}/options -->
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/my_projects/{idProject}/options</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2"Changes projects description, name or thumbnail. Redirects to project options on success and on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2"POST</td>
+  </tr>
+  <tr>
+    <th rowspan="3">Request Body</th>
+    <td>+idProject: string</td>
+    <td>Project ID</td>
+  </tr>
+  <tr>
+    <td>?name: string</td>
+    <td>Project Name</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>?description: string</td>
+    <td>Project Description</td>
+  </tr>
+  <tr>
+    <th></th>
+    <td>?img: string?</td>
+    <td>Project Thumbnail Path</td>
+  </tr>
+  <tr>
+    <th>Redirects</th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
+  </tr>
+    <th>Permissions</th>
+    <td colspan="2"OWN, COO</td>
+  </tr>
+</table>
 
-#### R317: Edit Project Description Action
-
-<!-- TODO: /dashboard/my_projects/{idProject}/options -->
-
-#### R318: Save Project Changes Action
-
-<!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
 #### 3.4 Module M04: Search Engine
 
