--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -572,7 +572,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>+idProject:integer</td>
+    <td>+idProject: integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
@@ -602,7 +602,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>+idProject:integer</td>
+    <td>+idProject: integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
@@ -669,7 +669,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project description</td>
   </tr>
     <tr>
-    <td>+Type</td>
+    <td>+type: string</td>
     <td>Project type (public or private)</td>
   </tr>
     <tr>
@@ -733,7 +733,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>+idProject:integer</td>
+    <td>+idProject: integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
@@ -764,7 +764,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>idProject</td>
+    <td>+idProject: integer</td>
     <td>Project Primary Key</td>
   </tr>
   <tr>
@@ -773,7 +773,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Submit</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-task-action">R309</a></th>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-task-action">R309</a></th>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -790,15 +790,15 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-    <td colspan="2"Changes selected member role or ban.</td>
+    <td colspan="2">Changes selected member role or ban.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td colspan="2"PUT</td>
+    <td colspan="2">PUT</td>
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>+idProject</td>
+    <td>+idProject: integer</td>
     <td>Project Primary Key</td>
   </tr>
   <tr>
@@ -819,7 +819,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
   </tr>
     <th>Permissions</th>
-    <td colspan="2"OWN, COO</td>
+    <td colspan="2">OWN, COO</td>
   </tr>
 </table>
 </table>
@@ -833,7 +833,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-    <td colspan="2">Creates a new task. Redirects to the project tasks page page on success and the create project form on failure.</td>
+     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI28_New_Task.png">UI28</a></td></td>
   </tr>
   <tr>
     <th>Method</th>
@@ -841,7 +841,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
    <tr>
     <th>UI</th>
-    <td colspan="2">GET</td>
+    <td colspan="2">https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/images/Interface/Desktop/UI28_New_Task.png</td>
   </tr>
     <tr>
     <th>Parameters</th>
@@ -875,7 +875,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
     <tr>
     <th>Parameters</th>
-    <td>idProject</td>
+    <td>+idProject: integer</td>
     <td>Project Primary Key</td>
   </tr>
   <tr>
@@ -884,7 +884,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Task title</td>
   </tr>
   <tr>
-    <td>+category</td>
+    <td>+category: string</td>
     <td>Task category</td>
   </tr>
   <tr>
@@ -893,7 +893,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Redirects</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r310-create-project-task-form">R310</a>R310</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r310-create-project-task-form">R310</a></th>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -917,12 +917,12 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">Delete</td>
   </tr>
   <tr>
-    <th>Parameters</th>
+    <th rowspan="2">Parameters</th>
     <td>+idProject:integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
-    <td>?idTask:integer</td>
+    <td>?idTask: integer</td>
     <td>Task primary key</td>
   </tr>
   <tr>
@@ -953,7 +953,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>+idProject</td>
+    <td>+idProject: integer</td>
     <td>Project Primary Key</td>
   </tr>
   <tr>
@@ -966,7 +966,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Permissions</th>
-    <td colspan="2">MEM</td>
+    <td colspan="2">OWN, COO</td>
   </tr>
 </table>
 
@@ -979,15 +979,15 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-    <td colspan="2"Changes the tasks title or content.</td>
+    <td colspan="2">Changes the tasks title or content.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td colspan="2"PUT</td>
+    <td colspan="2">PUT</td>
   </tr>
   <tr>
     <th>Parameters</th>
-    <td>+idProject</td>
+    <td>+idProject: integer</td>
     <td>Project Primary Key</td>
   </tr>
   <tr>
@@ -1000,7 +1000,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project Description</td>
   </tr>
   <tr>
-    <td>?img: string?</td>
+    <td>?imgPath: string</td>
     <td>Project Thumbnail Path</td>
   </tr>
   <tr>
@@ -1008,7 +1008,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
   </tr>
     <th>Permissions</th>
-    <td colspan="2"OWN, COO</td>
+    <td colspan="2">OWN, COO</td>
   </tr>
 </table>
 </table>
@@ -1022,11 +1022,11 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-    <td colspan="2"Changes projects description, name or thumbnail. Redirects to project options on success and on failure.</td>
+    <td colspan="2">Changes projects description, name or thumbnail. Redirects to project options on success and on failure.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td colspan="2"POST</td>
+    <td colspan="2">POST</td>
   </tr>
   <tr>
     <th rowspan="3">Request Body</th>
@@ -1038,13 +1038,12 @@ The architecture of our **Project Management** web application to develop is doc
     <td>Project Name</td>
   </tr>
   <tr>
-    <th></th>
     <td>?description: string</td>
     <td>Project Description</td>
   </tr>
   <tr>
     <th></th>
-    <td>?img: string?</td>
+    <td>?imgPath: string</td>
     <td>Project Thumbnail Path</td>
   </tr>
   <tr>
@@ -1052,7 +1051,7 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
   </tr>
     <th>Permissions</th>
-    <td colspan="2"OWN, COO</td>
+    <td colspan="2">OWN, COO</td>
   </tr>
 </table>
 
