More graphical fixes

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -124,15 +124,15 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/</td>
+    <td colspan="2">/</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Action that allows user to log in.</td>
+    <td colspan="2">Action that allows user to log in.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>POST</td>
+    <td colspan="2">POST</td>
   </tr>
   <tr>
     <th>Request Body</th>
@@ -156,7 +156,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>VIS</td>
+    <td colspan="2">VIS</td>
   </tr>
 </table>
 
@@ -164,15 +164,15 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/</td>
+    <td colspan="2">/</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Action that logs out the authenticated user.</td>
+    <td colspan="2">Action that logs out the authenticated user.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>POST</td>
+    <td colspan="2">POST</td>
   </tr>
   <tr>
     <th>Redirects</th>
@@ -181,7 +181,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -217,15 +217,15 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/</td>
+    <td colspan="2">/</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Action that inserts the user into the system. Redirects to the user profile page on success and the register form on failure.</td>
+    <td colspan="2">Action that inserts the user into the system. Redirects to the user profile page on success and the register form on failure.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>POST</td>
+    <td colspan="2">POST</td>
   </tr>
   <tr>
     <th>Request Body</th>
@@ -282,15 +282,15 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/profile/{id}</td>
+    <td colspan="2">/profile/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Page with the user individual profile information.</td>
+    <td colspan="2">Page with the user individual profile information.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>GET</td>
+    <td colspan="2">GET</td>
   </tr>
   <tr>
     <th>Parameters</th>
@@ -299,11 +299,11 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui19-profile">UI19</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui19-profile">UI19</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -311,15 +311,15 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/profile/{id}</td>
+    <td colspan="2">/profile/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Page with a modal to edit individual profile information.</td>
+    <td colspan="2">Page with a modal to edit individual profile information.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>GET</td>
+    <td colspan="2">GET</td>
   </tr>
   <tr>
     <th>Parameters</th>
@@ -328,15 +328,15 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui20-edit-profile">UI20</a></td>
+   <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui20-edit-profile">UI20</a></td>
   </tr>
   <tr>
     <th>SUBMIT</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r108-edit-profile-action">R108</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r108-edit-profile-action">R108</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -344,15 +344,15 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td>/profile/edit/{id}</td>
+    <td colspan="2">/profile/edit/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Action that changes user profile info based on the input received. Redirects to the user profile on success and edit profile page on failure.</td>
+    <td colspan="2">Action that changes user profile info based on the input received. Redirects to the user profile on success and edit profile page on failure.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>POST</td>
+    <td colspan="2">POST</td>
   </tr>
   <tr>
     <th>Request Body</th>
