--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -406,7 +406,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>VIS</td>
+    <td colspan="2">VIS</td>
   </tr>
 </table>
 
